# RayTracer

./: .gitignore  CMakeLists.txt  README.md
scenes/: config.json  scene_1.json  scene_2.json  scene_3.json
src/: main.cpp
src/Camera/: Camera.cpp  Camera.hpp
src/Common/: Color.hpp  Debug.hpp  Intersection.hpp  Parser.hpp  Utils.hpp
src/Config/: Configuration.hpp  config.hpp
src/Debug/: Debug.hpp
src/EventHandler/: EventHandler.cpp  EventHandler.hpp
src/Objects/: AHitable.hpp  ALight.hpp  AObject.hpp  AShapeObject.hpp
src/Objects/Box/: Box.cpp  Box.hpp
src/Objects/Camera/: Camera.cpp  Camera.hpp
src/Objects/Plane/: Plane.cpp  Plane.hpp
src/Objects/PointLight/: PointLight.cpp  PointLight.hpp
src/Objects/Polygon/: Polygon.cpp  Polygon.hpp
src/Objects/Sphere/: Sphere.cpp  Sphere.hpp
src/Objects/Triangle/: Triangle.cpp  Triangle.hpp
src/Ray/: Ray.cpp  Ray.hpp
src/RayTracer/: RayTracer.cpp  RayTracer.hpp
src/Scene/: Scene.cpp  Scene.hpp
src/SphereObject/: SphereObject.cpp  SphereObject.hpp
src/Window/: Window.cpp  Window.hpp
